# clapkit-test

./: .clang-format  CMakeLists.txt  README.md  cktest.r  main.cpp  main.h
